--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ psycopg2-binary==2.9.6
 sqlparse==0.4.3
 typing_extensions==4.5.0
 whitenoise==6.4.0
+django-model-utils=4.3.1
 
 python-dotenv~=1.0.0
