--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ python-dotenv==1.0.0
 sqlparse==0.4.3
 typing_extensions==4.5.0
 whitenoise==6.4.0
-django-email-users~=1.1.0
-django-model-utils=4.3.1
-
-python-dotenv~=1.0.0
+django-email-users==1.1.0
+django-model-utils==4.3.1
+python-dotenv==1.0.0
